added all region option drop down menu

--- a/landingpage.html
+++ b/landingpage.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TRC Website</title>
     <link rel="stylesheet" href="landingpage.css">
 </head>
+
 <body>
     <header class="navbar">
         <div class="logo">
@@ -32,19 +34,67 @@
                 <div class="form-group">
                     <label for="from">Kutoka</label>
                     <select id="from" name="from">
-                        <option>Kutoka</option>
+                        <option>Kigoma</option>
+                        <option>Arusha</option>
+                        <option>Dar es Salaam</option>
+                        <option>Dodoma</option>
+                        <option>Geita</option>
+                        <option>Iringa</option>
+                        <option>Bukoba</option>
+                        <option> Mpanda</option>
+                        <option> Moshi</option>
+                        <option> Lindi</option>
+                        <option> Babati</option>
+                        <option>Musoma</option>
+                        <option> Mbeya</option>
+                        <option> Morogoro</option>
+                        <option> Mtwara</option>
+                        <option> Mwanza</option>
+                        <option> Njombe</option>
+                        <option>Songea</option>
+                        <option> Shinyanga</option>
+                        <option> Bariadi</option>
+                        <option> Singida</option>
+                        <option>Vwawa</option>
+                        <option>Tabora</option>
+                        <option>Tanga</option>
+
                     </select>
                 </div>
                 <div class="form-group">
                     <label for="to">Kwenda</label>
                     <select id="to" name="to">
-                        <option>Kwenda</option>
+                        <option>Kigoma</option>
+                        <option>Arusha</option>
+                        <option>Dar es Salaam</option>
+                        <option>Dodoma</option>
+                        <option>Geita</option>
+                        <option>Iringa</option>
+                        <option>Bukoba</option>
+                        <option> Mpanda</option>
+                        <option> Moshi</option>
+                        <option> Lindi</option>
+                        <option> Babati</option>
+                        <option>Musoma</option>
+                        <option> Mbeya</option>
+                        <option> Morogoro</option>
+                        <option> Mtwara</option>
+                        <option> Mwanza</option>
+                        <option> Njombe</option>
+                        <option>Songea</option>
+                        <option> Shinyanga</option>
+                        <option> Bariadi</option>
+                        <option> Singida</option>
+                        <option>Vwawa</option>
+                        <option>Tabora</option>
+                        <option>Tanga</option>
                     </select>
                 </div>
                 <div class="form-group">
                     <label for="passenger">Abiria</label>
                     <select id="passenger" name="passenger">
                         <option>1 Mtu mzima</option>
+                        <option>2 Mtoto</option>
                     </select>
                 </div>
                 <div class="form-buttons">
@@ -55,4 +105,5 @@
         </div>
     </section>
 </body>
+
 </html>
