added steps to help users understand using the system

--- a/landingpage.html
+++ b/landingpage.html
@@ -104,6 +104,53 @@
             </form>
         </div>
     </section>
+
+    <section class="steps">
+        <div class="container">
+            <div class="step">
+                <span class="icon">🔍</span>
+                <h3>Taarifa za safari</h3>
+                <p>Chagua kituo unachotoka, na kituo unachokwenda. Weka idadi ya abiria watakaosafiri...</p>
+                <span class="step-label blue">01 Hatua</span>
+            </div>
+            <div class="step">
+                <span class="icon">🚆</span>
+                <h3>Chagua treni</h3>
+                <p>Katika orodha ya treni zilizopo, hakikisha unachagua treni sahihi...</p>
+                <span class="step-label green">02 Hatua</span>
+            </div>
+            <div class="step">
+                <span class="icon">💺</span>
+                <h3>Chagua siti</h3>
+                <p>Chagua behewa la daraja unalohitaji...</p>
+                <span class="step-label green">03 Hatua</span>
+            </div>
+            <div class="step">
+                <span class="icon">👤</span>
+                <h3>Taarifa za wasafiri</h3>
+                <p>Jaza taarifa za abiria pamoja na taarifa za mawasiliano...</p>
+                <span class="step-label blue">04 Hatua</span>
+            </div>
+            <div class="step">
+                <span class="icon">✔️</span>
+                <h3>Thibitisha taarifa</h3>
+                <p>Hakikisha taarifa sahihi za treni...</p>
+                <span class="step-label red">05 Hatua</span>
+            </div>
+            <div class="step">
+                <span class="icon">💳</span>
+                <h3>Fanya malipo</h3>
+                <p>Fanya malipo kwa njia ya simu au wakala...</p>
+                <span class="step-label red">06 Hatua</span>
+            </div>
+            <div class="step">
+                <span class="icon">🎟️</span>
+                <h3>Pata tiketi</h3>
+                <p>Fika kituoni na tiketi iliyothibitishwa...</p>
+                <span class="step-label blue">07 Hatua</span>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
