added footer with social media icons

--- a/landingpage.html
+++ b/landingpage.html
@@ -41,20 +41,20 @@
                         <option>Geita</option>
                         <option>Iringa</option>
                         <option>Bukoba</option>
-                        <option> Mpanda</option>
-                        <option> Moshi</option>
-                        <option> Lindi</option>
-                        <option> Babati</option>
+                        <option>Mpanda</option>
+                        <option>Moshi</option>
+                        <option>Lindi</option>
+                        <option>Babati</option>
                         <option>Musoma</option>
-                        <option> Mbeya</option>
-                        <option> Morogoro</option>
-                        <option> Mtwara</option>
-                        <option> Mwanza</option>
-                        <option> Njombe</option>
+                        <option>Mbeya</option>
+                        <option>Morogoro</option>
+                        <option>Mtwara</option>
+                        <option>Mwanza</option>
+                        <option>Njombe</option>
                         <option>Songea</option>
-                        <option> Shinyanga</option>
-                        <option> Bariadi</option>
-                        <option> Singida</option>
+                        <option>Shinyanga</option>
+                        <option>Bariadi</option>
+                        <option>Singida</option>
                         <option>Vwawa</option>
                         <option>Tabora</option>
                         <option>Tanga</option>
@@ -71,20 +71,20 @@
                         <option>Geita</option>
                         <option>Iringa</option>
                         <option>Bukoba</option>
-                        <option> Mpanda</option>
-                        <option> Moshi</option>
-                        <option> Lindi</option>
-                        <option> Babati</option>
+                        <option>Mpanda</option>
+                        <option>Moshi</option>
+                        <option>Lindi</option>
+                        <option>Babati</option>
                         <option>Musoma</option>
-                        <option> Mbeya</option>
-                        <option> Morogoro</option>
-                        <option> Mtwara</option>
-                        <option> Mwanza</option>
-                        <option> Njombe</option>
+                        <option>Mbeya</option>
+                        <option>Morogoro</option>
+                        <option>Mtwara</option>
+                        <option>Mwanza</option>
+                        <option>Njombe</option>
                         <option>Songea</option>
-                        <option> Shinyanga</option>
-                        <option> Bariadi</option>
-                        <option> Singida</option>
+                        <option>Shinyanga</option>
+                        <option>Bariadi</option>
+                        <option>Singida</option>
                         <option>Vwawa</option>
                         <option>Tabora</option>
                         <option>Tanga</option>
@@ -151,6 +151,19 @@
             </div>
         </div>
     </section>
+
+    <footer class="footer">
+        <div class="footer-content">
+            <div class="social-icons">
+                <a href="#" class="social-icon"><img src="/resources/facebook.png" alt="Facebook"></a>
+                <a href="#" class="social-icon"><img src="/resources/Instagram_icon.png" alt="Instagram"></a>
+                <a href="#" class="social-icon"><img src="/resources/linkedin.png" alt="Twitter"></a>
+                <a href="#" class="social-icon"><img src="/resources/youtube.png" alt="YouTube"></a>
+            </div>
+            <p>Powered by Dev medius</p>
+            <p>© 2025 TRC E-Ticketing System</p>
+        </div>
+    </footer>
 </body>
 
 </html>
