testing the capturing of user inputs using javascript

--- a/landingpage.html
+++ b/landingpage.html
@@ -50,7 +50,9 @@
         <div class="overlay">
             <div class="tab-container">
                 <button class="active-tab">Hifadhi Treni</button>
-                <button>Angalia Uhifadhi</button>
+                <!-- <button>Angalia Uhifadhi</button> -->
+                <button type="button" id="checkBtn">Angalia Uhifadhi</button>
+
                 <button>Mizigo</button>
             </div>
             <form class="search-form">
@@ -113,11 +115,12 @@
                         <option>Tanga</option>
                     </select>
                 </div>
+                <!-- <button type="button" id="checkBtn">check selections regions</button> -->
                 <div class="form-group">
                     <label for="passenger">Abiria</label>
                     <select id="passenger" name="passenger">
-                        <option>1 Mtu mzima</option>
-                        <option>2 Mtoto</option>
+                        <option> Mtu mzima</option>
+                        <option> Mtoto</option>
                     </select>
                 </div>
                 <div class="form-buttons">
