added other pages

--- a/landingpage.html
+++ b/landingpage.html
@@ -21,8 +21,8 @@
         <nav>
           <ul class="desktop-nav">
             <li><a href="#">Nyumbani</a></li>
-            <li><a href="#">Treni zilizopo</a></li>
-            <li><a href="#">Maoni</a></li>
+            <li><a href="trainzilizopo.html">Treni zilizopo</a></li>
+            <li><a href="maoni.html">Maoni</a></li>
             <li><a href="#">EN</a></li>
           </ul>
         </nav>
