implemented login and sign up pages

--- a/landingpage.html
+++ b/landingpage.html
@@ -24,7 +24,7 @@
             <li><a href="trainzilizopo.html">Treni zilizopo</a></li>
             <li><a href="maoni.html">Maoni</a></li>
             <li><a href="#">EN</a></li>
-            <li><a href="#">login</a></li>
+            <li><a href="loginpage.html">login</a></li>
           </ul>
         </nav>
       
@@ -41,7 +41,7 @@
             <li><a href="#">Treni zilizopo</a></li>
             <li><a href="#">Maoni</a></li>
             <li><a href="#">EN</a></li>
-            <li><a href="#">login</a></li>
+            <li><a href="loginpage.html">login</a></li>
           </ul>
         </nav>
       </header>
