learnt ajax & database operation

--- a/trainzilizopo.html
+++ b/trainzilizopo.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Treni Zilizopo</title>
     <link rel="stylesheet" href="trainzilizopo.css">
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="trainzilizopo.js"></script>
 </head>
 <body>
@@ -34,84 +35,9 @@
                     <th>Muda wa Kufika</th>
                 </tr>
             </thead>
-            <tbody>
-                <tr>
-                    <td>1</td>
-                    <td>L172 - DELUXE</td>
-                    <td>DAR ES SALAAM - ARUSHA</td>
-                    <td>31/01/2025 02:30 PM, JUMAA</td>
-                    <td>01/02/2025 12:10 PM, JUMAMOSI</td>
-                </tr>
-                <tr>
-                    <td>2</td>
-                    <td>YD71 - SGR</td>
-                    <td>DAR ES SALAAM - DODOMA</td>
-                    <td>03/02/2025 02:30 PM, ALHAMIS</td>
-                    <td>05/02/2025 12:10 PM, JUMAMOSI</td>
-                </tr>
-                <tr>
-                    <td>3</td>
-                    <td>L375 - DELUXE</td>
-                    <td>KIGOMA - MWANZA</td>
-                    <td>31/01/2025 02:30 PM, JUMAA</td>
-                    <td>01/02/2025 12:10 PM, JUMAMOSI</td>
-                </tr>
-                <tr>
-                    <td>4</td>
-                    <td>L172 - DELUXE</td>
-                    <td>DAR ES SALAAM - ARUSHA</td>
-                    <td>31/01/2025 02:30 PM, JUMAA</td>
-                    <td>01/02/2025 12:10 PM, JUMAMOSI</td>
-                </tr>
-                <tr>
-                    <td>5</td>
-                    <td>L172 - DELUXE</td>
-                    <td>DAR ES SALAAM - ARUSHA</td>
-                    <td>31/01/2025 02:30 PM, JUMAA</td>
-                    <td>01/02/2025 12:10 PM, JUMAMOSI</td>
-                </tr>
-                <tr>
-                    <td>6</td>
-                    <td>L172 - DELUXE</td>
-                    <td>DAR ES SALAAM - ARUSHA</td>
-                    <td>31/01/2025 02:30 PM, JUMAA</td>
-                    <td>01/02/2025 12:10 PM, JUMAMOSI</td>
-                </tr>
-                <tr>
-                    <td>7</td>
-                    <td>L172 - DELUXE</td>
-                    <td>DAR ES SALAAM - ARUSHA</td>
-                    <td>31/01/2025 02:30 PM, JUMAA</td>
-                    <td>01/02/2025 12:10 PM, JUMAMOSI</td>
-                </tr>
-                <tr>
-                    <td>8</td>
-                    <td>L172 - DELUXE</td>
-                    <td>DAR ES SALAAM - ARUSHA</td>
-                    <td>31/01/2025 02:30 PM, JUMAA</td>
-                    <td>01/02/2025 12:10 PM, JUMAMOSI</td>
-                </tr>
-                <tr>
-                    <td>9</td>
-                    <td>L172 - DELUXE</td>
-                    <td>DAR ES SALAAM - ARUSHA</td>
-                    <td>31/01/2025 02:30 PM, JUMAA</td>
-                    <td>01/02/2025 12:10 PM, JUMAMOSI</td>
-                </tr>
-                <tr>
-                    <td>10</td>
-                    <td>L172 - DELUXE</td>
-                    <td>DAR ES SALAAM - ARUSHA</td>
-                    <td>31/01/2025 02:30 PM, JUMAA</td>
-                    <td>01/02/2025 12:10 PM, JUMAMOSI</td>
-                </tr>
-                <tr>
-                    <td>11</td>
-                    <td>L172 - DELUXE</td>
-                    <td>DAR ES SALAAM - ARUSHA</td>
-                    <td>31/01/2025 02:30 PM, JUMAA</td>
-                    <td>01/02/2025 12:10 PM, JUMAMOSI</td>
-                </tr>
+            <tbody id ="trains">
+                
+                
                 <!-- Add more rows here -->
             </tbody>
         </table>
